# primer3-py

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  CHANGES  MANIFEST.IN  MANIFEST.in  README.md  README.rst  api.html  buildutil.py  changes.html  changes_link.html  cython_help.html  cython_help.md  dev-requirements.txt  development.html  genindex.html  howtobuild.html  index.html  make.bat  miscellany.html  objects.inv  overview.html  primer3_test.py  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  setup.cfg  setup.py  valgrind-python.supp
.github/workflows/: build-wheels-pypi.yml  docs.yml  primer3-py-ci-github-action.yml  release.yml  test.yml  update-docs.yml
_build/doctrees/: changes.doctree  index.doctree  overview.doctree  quickstart.doctree
_build/html/: .buildinfo  objects.inv  py-modindex.html
_modules/: index.html
_modules/primer3/: bindings.html
_sources/: changes.rst.txt  changes.txt  index.md.txt  miscellany.txt  overview.txt  quickstart.txt
_sources/api/: bindings.rst.txt  primerdesign.txt  thermoanalysis.md.txt  thermoanalysis.rst.txt
_static/: documentation_options.js
api/: bindings.html  index.html  p3helpers.html  thermoanalysis.html
docs/: Makefile  changes_link.md  conf.py  cython_help.md  development.md  docs-requirements.txt  howtobuild.md  included_primer3_modifications.md  index.md  index.rst  miscellany.md  miscellany.rst  quickstart.md  quickstart.rst  requirements.txt
docs/api/: bindings.md  index.md  index.rst  p3helpers.md  thermoanalysis.md  thermoanalysis.rst
examples/: basicprimerdesign.py  orthogonalprimers.py
primer3/: __init__.py  argdefaults.py  bindings.py  p3helpers.h  p3helpers.pxd  p3helpers.pyx  primerdesign.pxd  primerdesign.pyx  simulated_bindings.py  test_primer3.py  thermoanalysis.c  thermoanalysis.pxd  thermoanalysis.pxi  thermoanalysis.pyx  wrappers.py
primer3/src/: analysis2.pyx  analysis_py.c  libprimer3_c.c  primer3_patches.c  primer3_py.c  primer3_py_helpers.c  primer3_py_helpers.h  primerdesign_helpers.c  primerdesign_helpers.h  primerdesign_py.c  thermoanalysis.pxd  thermoanalysis.pyx  thermoresult_py.h
primer3/test_files/: p3-tmpl-mispriming_input  primer_mispriming_input  primer_ok_regions_input  (+1 more)
scratch/: analysis_py.c  primer3_py_helpers.c  primerdesign.pyx  thermoresult_py.h
test_files/: primer_internal_input  primer_must_use_th_input  primer_ok_regions2_input
tests/: __init__.py  __main__.py  _leakcheck.py  _simulatedbindings.py  checkdatasets.py  primer3_precision_2018-07-12-14-43-00_783192c_darwin_3.6.1.json  primerdesign_test.py  save_thermo_values.py  test_argdefaults.py  test_ntthal_io.py  test_p3helpers.py  test_primerdesign.py  test_sequences.py  test_str_rep_ifc_compat.py  test_thermoanalysis.py  test_threadsafe.py  thermo_standard_values.json  thermoanalysis_test.py  wrappers.py
(+125 files in other folders)
